# qvapay-sdk-rust

./: Cargo.toml  README.md  estructura.md  utils.md
src/: client.rs  error.rs  lib.rs
src/api/: auth.rs  merchant.rs  mod.rs  pagos.rs  stocks.rs  store.rs
src/models/: auth.rs  merchant.rs  mod.rs  pago.rs  readme.md  stocks.rs
src/models/store/: gift_card.rs  mod.rs  phone_package.rs
tests/: integration_tests.rs
