[package]
name = "qvapay-sdk"
version = "0.1.0"
edition = "2021"
authors = ["Ciberguajiro <hacedorthe@gmail.com>"]
description = "Un SDK en Rust para la API de Pagos QVAPAY"
license = "MIT"
repository = "https://github.com/ciberguajiro/qvapay-sdk"
readme = "README.md"
keywords = ["qvapay", "payments", "sdk", "crypto"]
categories = ["api-bindings"]

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
wiremock = "0.6"
